// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AuthForm snapshot for login form 1`] = `
<form
  class="space-y-4"
  data-testid="auth-form"
  novalidate=""
>
  <div
    class="flex flex-col mb-4"
  >
    <label
      class="font-semibold mb-2 text-cyan-700"
      for="email"
    >
      Email
    </label>
    <input
      class="bg-slate-100 text-gray-800 placeholder:italic placeholder:text-gray-400 rounded-lg border border-cyan-300 px-4 py-3 focus:outline-none focus:border-cyan-500 transition"
      id="email"
      placeholder="Enter your email"
      required=""
      type="email"
      value=""
    />
  </div>
  <div
    class="flex flex-col mb-4"
  >
    <label
      class="font-semibold mb-2 text-cyan-700"
      for="password"
    >
      Password
    </label>
    <input
      class="bg-slate-100 text-gray-800 placeholder:italic placeholder:text-gray-400 rounded-lg border border-cyan-300 px-4 py-3 focus:outline-none focus:border-cyan-500 transition"
      id="password"
      placeholder="Enter your password"
      required=""
      type="password"
      value=""
    />
  </div>
  <button
    class="w-full py-3 mt-4 bg-cyan-600 hover:bg-cyan-700 text-white font-bold rounded-lg shadow-md transition w-full bg-cyan-700 hover:bg-cyan-800 text-white"
    type="submit"
  >
    Sign In
  </button>
</form>
`;

exports[`AuthForm snapshot for register form 1`] = `
<form
  class="space-y-4"
  data-testid="auth-form"
  novalidate=""
>
  <div
    class="flex flex-col mb-4"
  >
    <label
      class="font-semibold mb-2 text-cyan-700"
      for="email"
    >
      Email
    </label>
    <input
      class="bg-slate-100 text-gray-800 placeholder:italic placeholder:text-gray-400 rounded-lg border border-cyan-300 px-4 py-3 focus:outline-none focus:border-cyan-500 transition"
      id="email"
      placeholder="Enter your email"
      required=""
      type="email"
      value=""
    />
  </div>
  <div
    class="flex flex-col mb-4"
  >
    <label
      class="font-semibold mb-2 text-cyan-700"
      for="password"
    >
      Password
    </label>
    <input
      class="bg-slate-100 text-gray-800 placeholder:italic placeholder:text-gray-400 rounded-lg border border-cyan-300 px-4 py-3 focus:outline-none focus:border-cyan-500 transition"
      id="password"
      placeholder="Enter your password"
      required=""
      type="password"
      value=""
    />
  </div>
  <div
    class="flex flex-col mb-4"
  >
    <label
      class="font-semibold mb-2 text-cyan-700"
      for="confirm-password"
    >
      Confirm Password
    </label>
    <input
      class="bg-slate-100 text-gray-800 placeholder:italic placeholder:text-gray-400 rounded-lg border border-cyan-300 px-4 py-3 focus:outline-none focus:border-cyan-500 transition"
      id="confirm-password"
      placeholder="Repeat your password"
      required=""
      type="password"
      value=""
    />
  </div>
  <button
    class="w-full py-3 mt-4 bg-cyan-600 hover:bg-cyan-700 text-white font-bold rounded-lg shadow-md transition w-full bg-cyan-700 hover:bg-cyan-800 text-white"
    type="submit"
  >
    Sign Up
  </button>
</form>
`;
